# VLC_EQ

./: Build-Log  CMakeLists.txt  CodeSign.sh  DMG build command  README.md
resource/: VLCEQ_editor.uidesc  au-info.plist  win32resource.rc
source/: VLCEQ_cids.h  VLCEQ_controller.cpp  VLCEQ_controller.h  VLCEQ_entry.cpp  VLCEQ_processor.cpp  VLCEQ_processor.h  VLCEQ_shared.h  version.h
